--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         </header>
 
         <h1>Massimiliano is a front-end web<br>developer based in Italy.</h1>
-
+    </section>
+    <section class="mainCard secondCard">
         <section class="portfolioGrid">
 
             <a href="https://devwisdomhealthcare.netlify.app"><div class="cardPortfolio" id="card1"><img src="/images/Wisdom.png"></div></a>
