--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
             <a href="https://devwisdomhealthcare.netlify.app"><div class="cardPortfolio" id="card1"><img src="/images/Wisdom.png"></div></a>
             <a href="https://cantonifisioterapia.it"><div class="cardPortfolio" id="card2"><img src="/images/Wisdom.png"></div></a>
-            <!-- <a href="#"><div class="cardPortfolio" id="card1"><img src="/images/Wisdom.png"></div></a>
-            <a href="#"><div class="cardPortfolio" id="card1"><img src="/images/Wisdom.png"></div></a> -->
+            <a href="https://presentpaltest.netlify.app"><div class="cardPortfolio" id="card3"><img src="/images/presentpal.png"></div></a>
+            <!--<a href="#"><div class="cardPortfolio" id="card1"><img src="/images/Wisdom.png"></div></a> -->
             
         </section>
 
